made it so newest threads are shown first and fixed border and alignment issues with Thread.jsx

--- a/src/styling/Template.css
+++ b/src/styling/Template.css
@@ -20,7 +20,9 @@
 }
 
 .forumbannerheader {
-  border: solid white !important;
+  border: solid rgb(250, 250, 250) !important;
+  border-width: 1px !important;
+  border-radius: 0% !important;
 }
 
 .newTopicBtn {
